--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
+    <script src="https://unpkg.com/matter-js@0.17.1/build/matter.min.js"></script>
     <link rel="stylesheet" href="style.css">
 
     <title>Game of Life</title>
 </head>
 <body>
     <script src="main.js"></script>
+    <script src="Plane.js"></script>
+    <script src="Box.js"></script>
+    <script src="Ground.js"></script>
 </body>
 </html>
