--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src="main.js"></script>
+    <script src="Trail.js"></script>
     <script src="Plane.js"></script>
 </body>
 </html>
