scaling, trail improvements

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/matter-js@0.17.1/build/matter.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script> -->
+    <script src="Libraries/p5.min.js"></script>
+    <script src="Libraries/p5.sound.min.js"></script>
     <link rel="stylesheet" href="style.css">
 
     <title>Game of Life</title>
 </head>
 <body>
     <script src="main.js"></script>
-    <script src="Trail.js"></script>
+    <script src="Exhaust.js"></script>
     <script src="Plane.js"></script>
 </body>
 </html>
